finishing endpoint users
